--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                         	 
                              <!-- about me text -->	
                         	 <h2>...another <span class="label primary">Full Stack</span> Web Developer.</h2>
-                             <p>I create beautiful web interfaces for the digital world. I am focused on the best user experience....</p>
+                             <p>CS524 Intro to Cloud Computing - Lab #2</p>
+                             <p><h1>Server 2</h1></p>
                              <!-- about me text -->	 
                              
                              <h3>Let's socialize!</h3>
